# serde_test2

./: Cargo.toml  README.md  rustfmt.toml
.github/: FUNDING.yaml
.github/workflows/: ci.yaml  ci.yml
src/: assert.rs  configure.rs  de.rs  error.rs  lib.rs  ser.rs  token.rs
