[package]
name = "serde_test2"
version = "1.0.177"
authors = [
    "Erick Tryzelaar <erick.tryzelaar@gmail.com>",
    "David Tolnay <dtolnay@gmail.com>",
    "Jacob Pratt <jacob@jhpratt.dev>",
]
categories = ["development-tools::testing"]
description = "Token De/Serializer for testing De/Serialize implementations"
edition = "2021"
keywords = ["serde", "serialization", "testing", "dev-dependencies"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jhpratt/serde_test2"
rust-version = "1.61.0"

[features]
# Most situations will want `std` and the error isn't immediately obvious when it's disabled, so
# make it the default.
default = ["std"]
std = ["serde_core/std"]

[dependencies]
serde_core = { version = "1.0.220", default-features = false, features = [
    "alloc",
] }

[dev-dependencies]
serde = { version = "1.0.220", default-features = false }
serde_derive = "1.0.220"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
